--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,9 @@
 <%- include("header") -%>
 
-<h2>This page about myshelf</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sit doloremque beatae reiciendis autem labore nisi! Rerum explicabo similique totam! Nesciunt suscipit ex voluptas voluptate modi, blanditiis distinctio? Cumque, quibusdam.</p>
+<div class="header">
+    <h2>This page about myshelf</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sit doloremque beatae reiciendis autem labore nisi! Rerum explicabo similique totam! Nesciunt suscipit ex voluptas voluptate modi, blanditiis distinctio? Cumque, quibusdam.</p>    
+</div>
+
 
 <%- include("footer") -%>
